# mythicmcp

./: .gitignore  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.codex-manual  LICENSE  README.md  pyproject.toml
.claude/agents/: integration-test-runner.md  test-runner.md  unit-test-runner.md
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
scripts/: check_mcp_tools.py  dev_hotload_smoke.py  release_check.ps1  release_check.sh  run_integration_tests.sh
scripts/docker/: build-codex-image.ps1  docker-common.ps1  manual-entrypoint.sh  run-codex-manual.ps1  run-integration-tests.ps1  run-mcp-smoke.ps1
specs/001-mythic-core-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mythic-core-tools/checklists/: requirements.md
specs/001-mythic-core-tools/contracts/: mcp-tools.md
specs/002-uv-tool-install/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-uv-tool-install/checklists/: requirements.md
specs/003-agent-plugin-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-agent-plugin-system/checklists/: requirements.md
specs/003-agent-plugin-system/contracts/: mcp-tools.md
specs/004-core-file-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-core-file-tools/checklists/: api.md  requirements.md
specs/004-core-file-tools/contracts/: mcp-tools.md
specs/005-integration-testing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-integration-testing/checklists/: integration-testing.md  requirements.md
specs/005-integration-testing/contracts/: test-helpers.md
specs/006-yaml-plugin-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-yaml-plugin-config/checklists/: config-schema-and-architecture.md  requirements.md
specs/006-yaml-plugin-config/contracts/: yaml-config-schema.md
specs/007-apollo-full-coverage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-apollo-full-coverage/checklists/: config-schema-and-architecture.md  requirements.md
specs/007-apollo-full-coverage/contracts/: yaml-metadata-schema.md
specs/008-poseidon-plugin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-arachne-full-coverage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-core-payload-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/mythicmcp/: __init__.py  config.py  connection.py  models.py  server.py
src/mythicmcp/plugins/: __init__.py  (+5 more)
tests/: __init__.py  conftest.py  lab_config.py  lab_test_config.example.yaml
tests/integration/: __init__.py  config.all.yaml  config.apollo.yaml  config.arachne.yaml  config.poseidon.yaml  config.sample.yaml  config_models.py  conftest.py  state.py  test_02_payload_generation.py  test_03_payload_deployment.py  test_04_callback_verification.py  test_05_command_execution.py  test_06_cleanup.py  test_07_payload_tools.py  test_callback_verification.py  test_cleanup.py  test_connection.py  test_mcp_tools.py  test_payload_deployment.py
tests/unit/: test_c2_profile_tools.py  test_callback_commands.py  test_callbacks.py  test_config.py  test_dynamic_loading.py  test_file_tools.py  test_filebrowser.py  test_integration_config.py  test_mcp_tools.py  test_models.py  test_payload_tools.py  test_plugin_executor.py  test_status.py  test_tasks.py  test_yaml_loader.py
(+31 files in other folders)
