[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mythicmcp"
version = "0.1.0"
description = "MCP server for Mythic C2 Framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "MythicMCP Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.26.0",
    "mythic>=0.2.10",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
mythicmcp = "mythicmcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mythicmcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/mythicmcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
